--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -4,6 +4,56 @@
 <%namespace name='static' file='static_content.html'/>
 <%! from microsite_configuration.templatetags.microsite import platform_name %>
 
+<style>
+
+/* all I did here was change .references to .colophon and commented out the
+   text-align: right */
+
+.wrapper-footer footer .colophon .copyright {
+    margin: -2px 0 8px 0;
+    font-size: 0.6875em;
+    color: #c4c5c7;
+    /*text-align: right;*/
+}
+
+.wrapper-footer footer .colophon .nav-legal {
+    *zoom: 1;
+    /*text-align: right*/
+}
+
+.wrapper-footer footer .colophon .nav-legal:before, .wrapper-footer footer .colophon .nav-legal:after {
+    content: " ";
+    display: table
+}
+
+.wrapper-footer footer .colophon .nav-legal:after {
+    clear: both
+}
+
+.wrapper-footer footer .colophon .nav-legal li {
+    display: inline-block;
+    font-size: 0.6875em
+}
+
+.wrapper-footer footer .colophon .nav-legal li a {
+    display: block
+}
+
+.wrapper-footer footer .colophon .nav-legal .nav-legal-01 a:after {
+    margin-left: 5px;
+    content: "-"
+}
+
+/* powered-by is a new class */
+
+.wrapper-footer footer .powered-by {
+    text-align: right;
+}
+.wrapper-footer footer .powered-by a:hover {
+    border-bottom: none;
+}
+</style>
+
 <div class="wrapper wrapper-footer">
   <footer>
     <div class="colophon">
@@ -36,57 +86,21 @@
           </li>
       </ol>
       </nav>
-
-      <div class="colophon-about">
-        <img src="${static.url('images/header-logo.png')}" alt="${_('{platform_name} Logo').format(platform_name=platform_name())}" />
-
-        <p>${_("{platform_name} is a non-profit created by founding partners {Harvard} and {MIT} whose mission is to bring the best of higher education to students of all ages anywhere in the world, wherever there is Internet access. {platform_name}'s free online MOOCs are interactive and subjects include computer science, public health, and artificial intelligence.").format(platform_name="EdX", Harvard="Harvard", MIT="MIT")}</p>
-      </div>
+      <p class="copyright">${_("&copy; 2014 {platform_name}, some rights reserved").format(platform_name=settings.PLATFORM_NAME)}</p>
+        <nav class="nav-legal">
+          <ul>
+            <li class="nav-legal-01">
+              <a href="${marketing_link('TOS')}">${_("Terms of Service and Honor Code")}</a>
+            </li>
+            <li class="nav-legal-02">
+              <a href="${marketing_link('PRIVACY')}">${_("Privacy Policy")}</a>
+            </li>
+          </ul>
+        </nav>
     </div>
 
-    <div class="references">
-      <nav class="nav-social">
-        <ul>
-          <li class="nav-social-01">
-            <a href="http://www.meetup.com/edX-Global-Community/" rel="external">
-              <img src="${static.url('images/social/ico-social-meetup.png')}" alt="edX on Meetup" />
-            </a>
-          </li>
-          <li class="nav-social-02">
-            <a href="http://www.facebook.com/EdxOnline" rel="external">
-              <img src="${static.url('images/social/ico-social-facebook.png')}" alt="edX on Facebook" />
-            </a>
-          </li>
-          <li class="nav-social-03">
-            <a href="https://twitter.com/edXOnline" rel="external">
-              <img src="${static.url('images/social/ico-social-twitter.png')}" alt="edX on Twitter" />
-            </a>
-          </li>
-          <li class="nav-social-04">
-            <a href="https://plus.google.com/108235383044095082735/posts" rel="external">
-              <img src="${static.url('images/social/ico-social-google.png')}" alt="edX on Google+" />
-            </a>
-          </li>
-          <li class="nav-social-05">
-            <a href="http://youtube.com/user/edxonline" rel="external">
-              <img src="${static.url('images/social/ico-social-youtube.png')}" alt="edX on YouTube" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <p class="copyright">${_("&copy; 2014 {platform_name}, some rights reserved.").format(platform_name=settings.PLATFORM_NAME)}</p>
-
-      <nav class="nav-legal">
-        <ul>
-          <li class="nav-legal-01">
-            <a href="${marketing_link('TOS')}">${_("Terms of Service and Honor Code")}</a>
-          </li>
-          <li class="nav-legal-02">
-            <a href="${marketing_link('PRIVACY')}">${_("Privacy Policy")}</a>
-          </li>
-        </ul>
-      </nav>
+    <div class="powered-by">
+      <a href="http://openedx.org/"><img src="${static.url('images/edx-openedx-logo-tag.png')}" alt="Powered by Open edX" /></a>
     </div>
   </footer>
 </div>
