Add fixes for unit tests.

--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -167,3 +167,7 @@
     % endif
   </ul>
 </div>
+
+% if module_score is not 'null':
+  <div class="problem-feedback video-feedback">${_('You\'ve received credit for viewing this video.')}</div>
+% endif
